fix: right-aligned caret that does not truncate text on jobs table

--- a/src/Components/MaintenancePanel/JobsTable/JobsTable.css
+++ b/src/Components/MaintenancePanel/JobsTable/JobsTable.css
@@ -9,6 +9,14 @@
 .table-wrapper .jobs-cell:nth-of-type(4),
 .table-wrapper .jobs-cell:nth-of-type(3) {
   text-align: right;
+  /* width:15%; */
+}
+
+.table-wrapper .jobs-cell:nth-of-type(5) span,
+.table-wrapper .jobs-cell:nth-of-type(4) span,
+.table-wrapper .jobs-cell:nth-of-type(3) span {
+  /* 38px of padding to match icon and padding in header on right-aligned columns */
+  padding-inline-end: calc(var(--spacing-10) - var(--spacing-050));
 }
 
 rux-table-header-cell.jobs-header-cell:has(rux-icon.visible) div.right-align,
@@ -19,8 +27,8 @@ rux-table-header-cell.jobs-header-cell:hover div.right-align {
 
 rux-table-header-cell.jobs-header-cell:has(rux-icon.visible) div.right-align span,
 rux-table-header-cell.jobs-header-cell:hover div.right-align span {
-  width: calc(100% - 32px);
-  margin-left: auto;
+  /* width: calc(100% - 32px);
+  margin-left: auto; */
 }
 
 .table-wrapper .jobs-cell:nth-of-type(1) {
