--- a/src/common/Table/Table.css
+++ b/src/common/Table/Table.css
@@ -38,6 +38,10 @@
   grid-template-columns: 100% 0%;
 }
 
+.table-wrapper rux-table-header-cell div.right-align {
+  grid-template-columns: auto 32px;
+}
+
 .table-wrapper rux-table-header-cell:has(rux-icon.visible) div,
 .table-wrapper rux-table-header-cell:hover div {
   grid-template-columns: auto 1fr;
@@ -64,7 +68,7 @@ rux-container .table-wrapper {
 }
 
 /* to make up the difference for the sort icon in header cell */
-.table-wrapper rux-table-cell.right-align::after {
+/* .table-wrapper rux-table-cell.right-align::after {
   content: '';
   padding-right: var(--spacing-8);
-}
+} */
